--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <div id="app">
+    <main class="main-container">
+      <div class="back">
+        <img src="assets/icons/arrow-left-02.svg" alt="">
+        <span class="text-md">Voltar</span>
+      </div>
+
+      <h2>Formulário de Matrícula</h2>
+      <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+    </main>
+    <aside>
+      <div class="aside-container">
+        <header>
+          <img src="assets/logo.svg" alt="">
+          <h2>Porque cada momento de <span style="color: var(--text-highlight)">aprendizado</span> conta</h2>
+          <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+        </header>
+        <img src="assets/Illustration.svg" alt="">
+      </div>
+    </aside>
+  </div>
 </body>
 </html>
