--- a/index.html
+++ b/index.html
@@ -91,17 +91,26 @@
                 </div>
               </div>
             </fieldset>
-            <fieldset class="responsable-info">
+            <fieldset class="gardian">
               <legend>Informações do responsável</legend>
 
               <div class="input-wrapper">
-                <label for="name">Nome do responsável</label>
-                <input type="text" id="name" name="name" placeholder="Qual o nome do responsável?">
+                <label for="gardian-name">Nome do responsável</label>
+                <input type="text" id="gardian-name" name="gardian-name" placeholder="Qual o nome do responsável?">
+                <small>Principal responsável legal e contato de emergência</small>
                 
               </div>
               <div class="input-wrapper">
                 <label for="phone">Telefone</label>
-                <input type="number" id="phone" name="phone" placeholder="(00) 0 0000-0000">
+                <input type="tel" id="phone" name="phone" placeholder="(00) 0 0000-0000">
+              </div>
+              <div class="input-wrapper">
+                <label for="mail">E-mail</label>
+                <input type="email" id="mail" name="mail" placeholder="" required>
+                <div class="error">
+                  <img src="assets/icons/alert-circle.svg" alt="ícone de alerta">
+                  <span>Insira um e-mail válido</span>
+                </div>
               </div>
             </fieldset>
           </form>
