--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
               </div>
 
           </fieldset>
+
           <fieldset class="address-info">
               <legend>Endereço residencial</legend>
 
@@ -93,6 +94,7 @@
                 </div>
               </div>
           </fieldset>
+
           <fieldset class="gardian">
               <legend>Informações do responsável</legend>
 
@@ -115,6 +117,7 @@
                 </div>
               </div>
           </fieldset>
+
           <fieldset class="enroll-options">
             <legend>Opções de matrícula</legend>
             <div class="input-wrapper">
@@ -192,8 +195,22 @@
               </div> 
             </div>      
           </fieldset>
-        </form>
+          
+          <div class="terms-wrapper input-wrapper checkbox-wrapper">
+            <div class="checkbox-image"></div>                
+            <input type="checkbox" id="terms" name="terms">
 
+            <label for="terms">
+              Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a <strong>Política de Privacidade</strong> da escola Estrela do Amanhã. 
+            </label> 
+          </div>
+
+          <div class="actions-wrapper">
+            <button class="btn-secondary" type="button">Salvar respostas</button>
+
+            <button class="btn-primary" type="button">Fazer matrícula</button>
+          </div>
+        </form>
       </div>      
     </main>
     
