--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="app">
     <main>
-      <div class="main-container">
+      <div id="main" class="container">
         
         <div class="header">
           <div class="back">
@@ -211,19 +211,18 @@
             <button class="btn-primary" type="button">Fazer matrícula</button>
           </div>
         </form>
-      </div>      
+      </div>   
     </main>
-    
     <aside>
       <div class="aside-container">
-        <header>
+        <header class="flex-header">
           <img src="assets/logo.svg" alt="">
-          <h1>Porque cada momento <br> de <span style="color: var(--text-highlight)">aprendizado</span> conta</h1>
-          <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+          <h1 class="desktop-only">Porque cada momento <br> de <span class="desktop-only" style="color: var(--text-highlight)">aprendizado</span> conta</h1>
+          <p class="desktop-only">Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
         </header>
-        <img src="assets/Illustration.svg" alt="">
+        <img id= "illustration" src="assets/Illustration.svg" alt="">
       </div>
-    </aside>
+    </aside>  
   </div>
 </body>
 </html>
